--- a/gallery.html
+++ b/gallery.html
@@ -320,12 +320,12 @@
                      </div>
                      <div class="four columns">
                         <a target="_blank" href="/images/slika45.jpg">
-                            <img src="images/slika45.jpg" alt="#">
+                            <img src="/images/slika45.jpg" alt="#">
                           </a>
                         </div>
                      <div class="four columns">
                             <a target="_blank" href="/images/slika46.jpg">
-                                <img src="images/slika46.jpg" alt="#">
+                                <img src="/images/slika46.jpg" alt="#">
                               </a>
                      </div>
                      </div>
