--- a/gallery.html
+++ b/gallery.html
@@ -295,7 +295,7 @@
                      <div class="row">
                       <div class="four columns">
                         <a target="_blank" href="/images/slika41.jpg">
-                            <img src="/images/slika41.jpg" alt="#">
+                            <img src="images/slika41.jpg" alt="#">
                           </a>
                      </div>
                      
@@ -315,17 +315,17 @@
                      <div class="row">
                       <div class="four columns">
                         <a target="_blank" href="/images/slika44.jpg">
-                            <img src="/images/slika44.jpg" alt="#">
+                            <img src="images/slika44.jpg" alt="#">
                           </a>
                      </div>
                      <div class="four columns">
                         <a target="_blank" href="/images/slika45.jpg">
-                            <img src="/images/slika45.jpg" alt="#">
+                            <img src="images/slika45.jpg" alt="#">
                           </a>
                         </div>
                      <div class="four columns">
                             <a target="_blank" href="/images/slika46.jpg">
-                                <img src="/images/slika46.jpg" alt="#">
+                                <img src="images/slika46.jpg" alt="#">
                               </a>
                      </div>
                      </div>
@@ -333,7 +333,7 @@
                      <div class="row">
                       <div class="four columns">
                         <a target="_blank" href="/images/slika47.jpg">
-                            <img src="/images/slika47.jpg" alt="#">
+                            <img src="images/slika47.jpg" alt="#">
                           </a>
                      </div>
                      
