--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div class="container gallery">
       <div class="row">
         <div class="seven columns">
-          <img src="/images/ograda.JPG" id="fence">
+          <img src="images/ograda.JPG" id="fence">
         </div>
         <div class="five columns services" >
           <p id="o-nama">Naše usluge:</p>
@@ -101,7 +101,7 @@
 
         </div>
         <div class="seven columns">
-          <img src="/images/zgrade.jpg" id="buildings">
+          <img src="images/zgrade.jpg" id="buildings">
         </div>
       </div>
     </div>
