--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <p>Bavimo se izradom i montažom građevinske bravarije, te izradom i montažom predmeta od INOX-a, trudeći se da sve završimo u dogovorenom roku.</p>
       </div>
       <div class="seven columns">
-        <img src="images/stefan.JPG" id="welding">
+        <img src="images/stefan.jpg" id="welding">
       </div>
     </div>
   </div>
@@ -73,7 +73,7 @@
     <div class="container gallery">
       <div class="row">
         <div class="seven columns">
-          <img src="images/ograda.JPG" id="fence">
+          <img src="images/ograda.jpg" id="fence">
         </div>
         <div class="five columns services" >
           <p id="o-nama">Naše usluge:</p>
