--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
   <title>Bravarija Gajanin</title>
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="Izrada i montaža građevinske bravarije, te izrada i montaža predmeta od INOX-a">
+  <meta name="author" content="Bravarija Gajanin">
+
+  <meta name="keywords" content="Izrada građevinske bravarije, montaža građevinske bravarije, izrada INOX-a, montaža predmeta od INOX-a">
+
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -30,13 +33,14 @@
     <div class="container">
       <div class="row">
         <div class="five columns">
-          <h1 class="heading">Bravarija<span>Gajanin</span></h1>
+          <a href="index.html"><h1 class="heading">Bravarija<span>Gajanin</span></h1></a>
         </div>
         <div class="seven columns">
           <ul>
             <li><a href="#o-nama">O nama</a> </li>
             <li><a href="#contact-us">Kontakt</a> </li>
             <li><a href="gallery.html">Galerija</a> </li>
+            <li><a href="index-eng.html">ENG</a> </li>
           </ul>
         </div>
       </div>
