--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
           <p><i class="fa fa-map"></i><br>Jovana Dučića 1, Trn, Laktaši</p>
         </div>
         <div class="six columns py-2">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2829.896110094861!2d17.205790814925283!3d44.82368108397452!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x475e01af712f1a2d%3A0xae4fd5c2e1a1a1dc!2sMB+IMPEX+D.O.O.!5e0!3m2!1ssr!2sba!4v1563550689194!5m2!1ssr!2sba" width="450" height="390" frameborder="0" style="border:0" allowfullscreen=""></iframe><br>
+          <br> <br> <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2829.896110094861!2d17.205790814925283!3d44.82368108397452!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x475e01af712f1a2d%3A0xae4fd5c2e1a1a1dc!2sMB+IMPEX+D.O.O.!5e0!3m2!1ssr!2sba!4v1563550689194!5m2!1ssr!2sba" width="450" height="360" frameborder="0" style="border:0" allowfullscreen=""></iframe><br>
         </div>
       </div>
     </div>
