--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
   <title>Bravarija Gajanin</title>
   <meta name="description" content="Izrada i montaža građevinske bravarije, te izrada i montaža predmeta od INOX-a">
   <meta name="author" content="Bravarija Gajanin">
-
   <meta name="keywords" content="Izrada građevinske bravarije, montaža građevinske bravarije, izrada INOX-a, montaža predmeta od INOX-a">
-
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -23,9 +21,11 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/skeleton.css">
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="style.css">
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="images/logo.png">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -33,7 +33,9 @@
     <div class="container">
       <div class="row">
         <div class="five columns">
-          <a href="index.html"><h1 class="heading">Bravarija<span>Gajanin</span></h1></a>
+          <a href="index.html">
+            <h1 class="heading">Bravarija<span>Gajanin</span></h1>
+          </a>
         </div>
         <div class="seven columns">
           <ul>
@@ -46,11 +48,16 @@
       </div>
     </div>
   </header>
-  <div class="py-5 text-center text-white h-100 align-items-center d-flex" style="	background-image: linear-gradient(to bottom, rgba(0, 0, 0, .15), rgba(0, 0, 0, .75)), url(images/zgrade.jpg);	background-position: center center, center center;	background-size: cover, cover;	background-repeat: repeat, repeat;">
+  <div class="py-5 text-center text-white h-100 align-items-center d-flex" style="background-image: linear-gradient(rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.75)), url(&quot;images/zgrade.jpg&quot;); background-position: center center, center center; background-size: cover, cover; background-repeat: repeat, repeat;">
     <div class="container py-5">
       <div class="row">
         <div class="mx-auto col-lg-8 col-md-10">
-          <p class="lead mb-5"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></p> <a href="#" class="btn btn-lg btn-primary mx-1"></a>
+          <p class="lead mb-5"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></p>
+          <div class="col-14 col-sm-6 col-lg-12" style="">
+            <div class="widget-title">
+              <h1 class="text-white text-center">VRHUNSKI KVALITET USLUGA</h1>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -69,23 +76,23 @@
     </div>
     <div class="row">
       <div class="five columns">
-        <h2 class="padding text-center justify-content-center">Vrhunski kvalitet usluga!</h2>
-        <p class="padding1">Porodični posao, <span class="bravarija">Bravarija</span><span class="gajanin">Gajanin</span>, Vam nudi svoje usluge i obećava kvalitetu.</p>
+        <h1 class="padding text-center justify-content-center text-primary my-3 mb-5"><b>Vrhunski kvalitet usluga!</b></h1>
+        <h2 style="" class="text-secondary text-justify px-4 py-4"><b>Porodični posao, <span class="bravarija">Bravarija</span><span class="gajanin">Gajanin</span>, Vam nudi&nbsp;</b><br><b>svoje usluge i obećava kvalitetu.</b></h2>
         <p>
         </p>
-        <p>Bavimo se izradom i montažom građevinske bravarije, te izradom i montažom predmeta od INOX-a, trudeći se da sve završimo u dogovorenom roku.</p>
+        <h2 class="text-secondary px-4 text-justify"><b>Bavimo se izradom i montažom građevinske bravarije, te izradom i montažom predmeta od INOX-a, trudeći se da sve završimo u dogovorenom roku.</b></h2>
       </div>
       <div class="seven columns">
         <img src="images/stefan.jpg" id="welding">
       </div>
     </div>
   </div>
-  <div class="py-5 text-center align-items-center shadow">
+  <div style="">
     <div class="container">
       <div class="row">
         <div class="bg-white p-5 mx-auto col-md-8 col-10 text-center align-items-center justify-content-center">
           <h2 class=""><br></h2>
-          <h2 class="text-center align-items-center justify-content-center py-3"><span class="badge badge-light"><b>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Naše usluge</b></span></h2>
+          <h3 class="display-3 text-success"><span class="badge badge-light" style="">Naše usluge</span></h3>
         </div>
       </div>
     </div>
@@ -97,33 +104,24 @@
       </div>
       <div class="five columns services">
         <p id="o-nama">U ponudu naših usluga su:</p>
-        <ul>
-          <li>INOX ograde</li>
-          <li>Kovane ograde</li>
-          <li>Crna bravarija</li>
-          <li>Nadstrešnice</li>
-          <li>Metalne konstrukcije</li>
-          <li>Razne vrste stepeništa</li>
-          <li>Razne vrste rukohvata</li>
-          <li>Usluge zavarivanja</li>
+        <ul class="text-body">
+          <li><b>INOX ograde</b></li>
+          <li><b>Kovane ograde</b></li>
+          <li><b>Crna bravarija</b></li>
+          <li><b>Nadstrešnice</b></li>
+          <li><b>Metalne konstrukcije</b></li>
+          <li><b>Razne vrste stepeništa</b></li>
+          <li><b>Razne vrste rukohvata</b></li>
+          <li><b>Usluge zavarivanja</b></li>
         </ul>
       </div>
     </div>
   </div>
-  <div class="py-5 text-center align-items-center border-top border-success" style="">
+  <div class="py-5 text-center align-items-center" style="">
     <div class="container">
       <div class="row">
         <div class="bg-white p-5 mx-auto col-md-8 col-10">
           <p class="py-3"><br>Bavimo se izradom i montažom građevinske bravarije, te izradom i montažom predmeta od INOX-a, trudeći se da sve završimo u dogovorenom roku.</p>
-          <h2 class=""><br></h2>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="py-5 text-center align-items-center shadow">
-    <div class="container">
-      <div class="row">
-        <div class="bg-white p-5 mx-auto col-md-8 col-10 text-center align-items-center justify-content-center">
           <h2 class=""><br></h2>
         </div>
       </div>
@@ -138,18 +136,19 @@
   <div class="back-to-top">
     <button onclick="topFunction()" id="top" title="Idi na vrh" style="display: block;"><i class="fa fa-arrow-up"></i></button>
   </div>
-  <div class="py-5" style="	background-image: url(images/light-grey.jpg);	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
+  <div class="py-5" style="background-image: url(&quot;images/light-grey.jpg&quot;); background-position: left top; background-size: 100%; background-repeat: repeat;">
     <div class="container">
       <div class="row">
         <div class="six columns" id="contact-us">
-          <h4 class="text-center align-items-center justify-content-center"><span class="badge badge-light"><b>Kontaktirajte nas</b></span></h4>
-          <p contenteditable="true"><i class="fa fa-phone"></i><br>+387 66 025 335<br>+49 160 632 6060<br>+49 160 632 6060</p>
-          <p><i class="fa fa-envelope"></i><br>
-            <a href="mailto:bravarijagajanin@gmail.com"> bravarijagajanin@gmail.com</a> </p>
-          <p><i class="fa fa-map"></i><br>Jovana Dučića 1, Trn, Laktaši</p>
+          <h3 class="display-4 text-body"><span class="badge badge-light" style="">Kontaktirajte nas</span></h3>
+          <h2 contenteditable="true" class="py-2 pt-4"><i class="fa fa-phone"></i><br>+387 66 025 335<br>+49 160 632 6060<br>+49 160 632 6060</h2>
+          <a href="mailto:bravarijagajanin@gmail.com">
+            <h2 class="py-2"><i class="fa fa-envelope"></i><br>bravarijagajanin@gmail.com</h2>
+          </a>
+          <h2 contenteditable="true" class="py-2"><i class="fa fa-map"></i><br>Jovana Dučića 1, Trn, Laktaši</h2>
         </div>
-        <div class="six columns py-2">
-          <br> <br> <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2829.896110094861!2d17.205790814925283!3d44.82368108397452!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x475e01af712f1a2d%3A0xae4fd5c2e1a1a1dc!2sMB+IMPEX+D.O.O.!5e0!3m2!1ssr!2sba!4v1563550689194!5m2!1ssr!2sba" width="450" height="360" frameborder="0" style="border:0" allowfullscreen=""></iframe><br>
+        <div class="six columns text-center">
+          <br> <br> <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2829.896110094861!2d17.205790814925283!3d44.82368108397452!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x475e01af712f1a2d%3A0xae4fd5c2e1a1a1dc!2sMB+IMPEX+D.O.O.!5e0!3m2!1ssr!2sba!4v1563550689194!5m2!1ssr!2sba" width="380" height="360" frameborder="0" style="border:0" allowfullscreen=""></iframe><br>
         </div>
       </div>
     </div>
