--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
             <h1 class="heading">Bravarija<span>Gajanin</span></h1>
           </a>
         </div>
-        <div class="seven columns">
+        <div class="seven columns text-center">
           <ul>
-            <li><a href="#o-nama">O nama</a> </li>
-            <li><a href="#contact-us">Kontakt</a> </li>
-            <li><a href="gallery.html">Galerija</a> </li>
-            <li><a href="index-eng.html">ENG</a> </li>
+            <li><a href="#o-nama" class="text-center">O nama</a> </li>
+            <li><a href="#contact-us" class="text-center">Kontakt</a> </li>
+            <li><a href="gallery.html" class="text-center">Galerija</a> </li>
+            <li><a href="index-eng.html" class="text-center">ENG</a> </li>
           </ul>
         </div>
       </div>
