--- a/gallery.html
+++ b/gallery.html
@@ -43,7 +43,8 @@
             <li><a href="index.html#o-nama">O nama</a> </li>
             <li><a href="index.html#contact-us">Kontakt</a> </li>
             <li><a href="gallery.html">Galerija</a> </li>
-            <li><a href="index-eng.html">ENG</a> </li>
+            <li><a class="btn btn-outline-primary" href="gallery-eng.html">ENG</a> </li>
+
           </ul>
         </div>
       </div>
