--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <li><a href="#o-nama" class="text-center">O nama</a> </li>
             <li><a href="#contact-us" class="text-center">Kontakt</a> </li>
             <li><a href="gallery.html" class="text-center">Galerija</a> </li>
-            <li><a href="index-eng.html" class="text-center">ENG</a> </li>
+            <li><a class="btn btn-outline-primary" href="index-eng.html">ENG</a> </li>
           </ul>
         </div>
       </div>
