--- a/gallery.html
+++ b/gallery.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Bravarija Gajanin</title>
+  <title>Bravarija Gajanin - galerija</title>
   <meta name="description" content="Izrada i montaža građevinske bravarije, te izrada i montaža predmeta od INOX-a">
   <meta name="author" content="Bravarija Gajanin">
 
