--- a/index.html
+++ b/index.html
@@ -145,10 +145,10 @@
           <a href="mailto:bravarijagajanin@gmail.com">
             <h2 class="py-2"><i class="fa fa-envelope"></i><br>bravarijagajanin@gmail.com</h2>
           </a>
-          <h2 contenteditable="true" class="py-2"><i class="fa fa-map"></i><br>Jovana Dučića 1, Trn, Laktaši</h2>
+          <h2 contenteditable="true" class="py-2"><i class="fa fa-map"></i><br>23. aprila 88, Trn, Laktaši</h2>
         </div>
         <div class="six columns text-center">
-          <br> <br> <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2829.896110094861!2d17.205790814925283!3d44.82368108397452!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x475e01af712f1a2d%3A0xae4fd5c2e1a1a1dc!2sMB+IMPEX+D.O.O.!5e0!3m2!1ssr!2sba!4v1563550689194!5m2!1ssr!2sba" width="380" height="360" frameborder="0" style="border:0" allowfullscreen=""></iframe><br>
+          <br> <br> <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1373.9665141401963!2d17.246477818922322!3d44.85306108177554!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x475e011900030df7%3A0x9cea8a47f7393c53!2sBravarija%20Gajanin!5e0!3m2!1ssr!2sba!4v1600712447387!5m2!1ssr!2sba" width="380" height="360" frameborder="0" style="border:0" allowfullscreen=""></iframe><br>
         </div>
       </div>
     </div>
