--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
       <div class="row">
         <div class="six columns" id="contact-us">
           <h3 class="display-4 text-body"><span class="badge badge-light" style="">Kontaktirajte nas</span></h3>
-          <h2 contenteditable="true" class="py-2 pt-4"><i class="fa fa-phone"></i><br>+387 66 025 335<br>+49 160 632 6060<br>+49 160 632 6060</h2>
+          <h2 contenteditable="true" class="py-2 pt-4"><i class="fa fa-phone"></i><br>+387 66025335 - Stefan<br>+49 1606326060 - Slobodan<br>+49 15731329371 - Dragoljub</h2>
           <a href="mailto:bravarijagajanin@gmail.com">
             <h2 class="py-2"><i class="fa fa-envelope"></i><br>bravarijagajanin@gmail.com</h2>
           </a>
