--- a/index.html
+++ b/index.html
@@ -77,10 +77,9 @@
     <div class="row">
       <div class="five columns">
         <h1 class="padding text-center justify-content-center text-primary my-3 mb-5"><b>Vrhunski kvalitet usluga!</b></h1>
-        <h2 style="" class="text-secondary text-justify px-4 py-4"><b>Porodični posao, <span class="bravarija">Bravarija</span><span class="gajanin">Gajanin</span>, Vam nudi&nbsp;</b><br><b>svoje usluge i obećava kvalitetu.</b></h2>
-        <p>
-        </p>
-        <h2 class="text-secondary px-4 text-justify"><b>Bavimo se izradom i montažom građevinske bravarije, te izradom i montažom predmeta od INOX-a, trudeći se da sve završimo u dogovorenom roku.</b></h2>
+        
+        <h2 class="text-secondary px-4 text-justify"><b><span class="bravarija">Bravarija</span><span class="gajanin">Gajanin</span> je porodična firma koja nudi razne vrste usluga u oblasti obrade metala. 
+          Bavimo se izradom i montažom predmeta od INOX-a, crne bravarije i ogradnih sistema.</b></h2>
       </div>
       <div class="seven columns">
         <img src="images/stefan.jpg" id="welding">
@@ -103,16 +102,16 @@
         <img src="images/ograda.jpg" id="fence">
       </div>
       <div class="five columns services">
-        <p id="o-nama">U ponudu naših usluga su:</p>
-        <ul class="text-body">
+        <p id="o-nama">Iz ponude naših usluga izdvajamo:</p>
+        <ul class="text-body"> 
+
           <li><b>INOX ograde</b></li>
           <li><b>Kovane ograde</b></li>
-          <li><b>Crna bravarija</b></li>
           <li><b>Nadstrešnice</b></li>
-          <li><b>Metalne konstrukcije</b></li>
-          <li><b>Razne vrste stepeništa</b></li>
-          <li><b>Razne vrste rukohvata</b></li>
-          <li><b>Usluge zavarivanja</b></li>
+          <li><b>Željezne konstrukcije</b></li>
+          <li><b>Unutrašnja i vanjska stepeništa</b></li>
+          <li><b>Rukohvate</b></li>
+          <li><b>Željezna i INOX galanterija.</b></li>
         </ul>
       </div>
     </div>
@@ -121,7 +120,7 @@
     <div class="container">
       <div class="row">
         <div class="bg-white p-5 mx-auto col-md-8 col-10">
-          <p class="py-3"><br>Bavimo se izradom i montažom građevinske bravarije, te izradom i montažom predmeta od INOX-a, trudeći se da sve završimo u dogovorenom roku.</p>
+          <p class="py-3"><br><b>Nudimo usluge zavarivanja postupcima TIG, MIG/MAG, REL (MMA).</b></p>
           <h2 class=""><br></h2>
         </div>
       </div>
