--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <h1 class="padding text-center justify-content-center text-primary my-3 mb-5"><b>Vrhunski kvalitet usluga!</b></h1>
         
         <h2 class="text-secondary px-4 text-justify"><b><span class="bravarija">Bravarija</span><span class="gajanin">Gajanin</span> je porodična firma koja nudi razne vrste usluga u oblasti obrade metala. 
-          Bavimo se izradom i montažom predmeta od INOX-a, crne bravarije i ogradnih sistema.</b></h2>
+        <bR>  Bavimo se izradom i montažom predmeta od INOX-a, crne bravarije i ogradnih sistema.</b></h2>
       </div>
       <div class="seven columns">
         <img src="images/stefan.jpg" id="welding">
