--- a/gallery-eng.html
+++ b/gallery-eng.html
@@ -40,10 +40,10 @@
         </div>
         <div class="seven columns">
           <ul>
-            <li><a href="index.html#o-nama">O nama</a> </li>
-            <li><a href="index.html#contact-us">Kontakt</a> </li>
-            <li><a href="gallery.html">Galerija</a> </li>
-            <li><a class="btn btn-outline-primary" href="gallery-eng.html">ENG</a> </li>
+            <li><a href="#o-nama" class="text-center">About us</a> </li>
+            <li><a href="#contact-us" class="text-center">Contact</a> </li>
+            <li><a href="gallery.html" class="text-center">Gallery</a> </li>
+            <li><a class="btn btn-outline-primary" href="gallery.html">SRB</a> </li>
 
           </ul>
         </div>
