--- a/first.html
+++ b/first.html
@@ -142,7 +142,7 @@
           <h3 class="display-4 text-body"><span class="badge badge-light" style="">Kontaktirajte nas</span></h3>
           <h2 contenteditable="true" class="py-2 pt-4"><i class="fa fa-phone"></i><br>+387 66025335 - Stefan<br>+49 1606326060 - Slobodan<br>+49 15731329371 - Dragoljub</h2>
           <a href="mailto:bravarijagajanin@gmail.com">
-            <h2 class="py-2"><i class="fa fa-envelope"></i><br>bravarijagajanin@gmail.com</h2>
+            <h2 class="py-2"><i class="fa fa-envelope"></i><br>bravarijagajaninbl@gmail.com</h2>
           </a>
           <h2 contenteditable="true" class="py-2"><i class="fa fa-map"></i><br>Ulica 23. aprila br. 88, Trn, Laktaši</h2>
         </div>
