--- a/first.html
+++ b/first.html
@@ -41,7 +41,7 @@
           <ul>
             <li><a href="#o-nama" class="text-center">About us</a> </li>
             <li><a href="#contact-us" class="text-center">Contact</a> </li>
-            <li><a href="gallery.html" class="text-center">Gallery</a> </li>
+            <li><a href="gallery-eng.html" class="text-center">Gallery</a> </li>
             <li><a class="btn btn-outline-primary" href="index.html">SRB</a> </li>
           </ul>
         </div>
