--- a/gallery-eng.html
+++ b/gallery-eng.html
@@ -40,8 +40,8 @@
         </div>
         <div class="seven columns">
           <ul>
-            <li><a href="#o-nama" class="text-center">About us</a> </li>
-            <li><a href="#contact-us" class="text-center">Contact</a> </li>
+            <li><a href="first.html#o-nama" class="text-center">About us</a> </li>
+            <li><a href="first.html#contact-us" class="text-center">Contact</a> </li>
             <li><a href="gallery.html" class="text-center">Gallery</a> </li>
             <li><a class="btn btn-outline-primary" href="gallery.html">SRB</a> </li>
 
