--- a/first.html
+++ b/first.html
@@ -33,7 +33,7 @@
     <div class="container">
       <div class="row">
         <div class="five columns">
-          <a href="index.html">
+          <a href="first.html">
             <h1 class="heading">Bravarija<span>Gajanin</span></h1>
           </a>
         </div>
