--- a/gallery-eng.html
+++ b/gallery-eng.html
@@ -36,7 +36,7 @@
     <div class="container">
       <div class="row">
         <div class="five columns">
-            <a href="index.html"><h1 class="heading">Bravarija<span>Gajanin</span></h1></a>
+            <a href="first.html"><h1 class="heading">Bravarija<span>Gajanin</span></h1></a>
         </div>
         <div class="seven columns">
           <ul>
