--- a/first.html
+++ b/first.html
@@ -79,7 +79,7 @@
         <h1 class="padding text-center justify-content-center text-primary my-3 mb-5"><b>Top quality service!</b></h1>
         
         <h2 class="text-secondary px-4 text-justify"><b><span class="bravarija">Locksmith</span><span class="gajanin">Gajanin</span> is a family company that offers various types of services in the field of metal processing.
-        <bR>  We manufacture and assemble items made of INOX, black hardware and fencing systems.</b></h2>
+        <bR><br>  We manufacture and assemble items made of INOX, black hardware and fencing systems.</b></h2>
       </div>
       <div class="seven columns">
         <img src="images/stefan.jpg" id="welding">
