--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Bravarija Gajanin</title>
+  <title>Bravarija Gajanin - Banja Luka</title>
   <meta name="description" content="Izrada i montaža građevinske bravarije, te izrada i montaža predmeta od INOX-a">
   <meta name="author" content="Bravarija Gajanin">
-  <meta name="keywords" content="Izrada građevinske bravarije, montaža građevinske bravarije, izrada INOX-a, montaža predmeta od INOX-a">
+  <meta name="keywords" content="Bravarija,Laktasi,Trn,INOX ograde,Kovane ograde,Nadstrešnice,Željezne konstrukcije,Unutrašnja i vanjska stepeništa,Rukohvati,zavarivanja postupcima TIG, MIG/MAG, REL,Željezna i INOX galanterija">
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
