--- a/index-ger.html
+++ b/index-ger.html
@@ -43,32 +43,16 @@
             <li><a href="#contact-us" class="text-center">Kontakt</a> </li>
             <li><a href="gallery-ger.html" class="text-center">Galerie</a></li>
           </ul>
-          <div class="btn-group">
-            <button class="btn btn-primary dropdown-toggle" data-toggle="dropdown"> With Form </button>
-            <div class="dropdown-menu">
-              <form class="p-3">
-                <div class="form-group"></div>
-                <div class="form-group"></div>
-                <button type="submit" class="btn btn-primary">Sign in</button>
-              </form>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">New around here? Sign up</a>
-              <a class="dropdown-item" href="#">Forgot password?</a>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-12">
-              <div class="btn-group">
-                <div class="dropdown-divider">
-                  <div class="dropdown-menu" x-placement="bottom-start" style="position: absolute; transform: translate3d(128px, 38px, 0px); top: 0px; left: 0px; will-change: transform;">
-                    <a class="dropdown-item" href="#">SRB</a>
-                    <a class="dropdown-item" href="#">GER</a>
-                    <a class="dropdown-item" href="#">ENG</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+ 
+          <li class=".dropdown-menu">
+            <div class="dropdown">
+              <button class="dropbtn"> <a href="#portfolio">ENG/GER</a></button>
+               <ul>
+                 <div class="dropdown-content">
+             <li><a href="webdesign.html">SRB</a></li> 
+             <li><a href="digitalmarketing.html">GER</a></li>
+             <li><a href="graphicdesign.html">ENG</a></li>
+            </ul> </div></li>
         </div>
       </div>
     </div>
