--- a/index-ger.html
+++ b/index-ger.html
@@ -46,12 +46,12 @@
  
           <li class=".dropdown-menu">
             <div class="dropdown">
-              <button class="dropbtn"> <a href="#portfolio">ENG/GER</a></button>
+              <button class="dropbtn"> >ENG/GER</button>
                <ul>
                  <div class="dropdown-content">
-             <li><a href="webdesign.html">SRB</a></li> 
-             <li><a href="digitalmarketing.html">GER</a></li>
-             <li><a href="graphicdesign.html">ENG</a></li>
+             <li><a href="index.html">SRB</a></li> 
+             <li><a href="index-ger.html">GER</a></li>
+             <li><a href="first.html">ENG</a></li>
             </ul> </div></li>
         </div>
       </div>
