--- a/index-ger.html
+++ b/index-ger.html
@@ -44,7 +44,7 @@
             <li><a href="gallery-ger.html" class="text-center">Galerie</a></li>
                       <li class=".dropdown-menu">
             <div class="dropdown">
-              <button class="dropbtn"> >ENG/GER</button>
+              <button class="dropbtn">ENG</button>
                <ul>
                  <div class="dropdown-content">
              <li><a href="index.html">SRB</a></li> 
