--- a/index-ger.html
+++ b/index-ger.html
@@ -40,7 +40,7 @@
         <div class="seven columns text-center">
           <ul>
             <li><a href="#o-nama" class="text-center">Über uns</a> </li>
-            <li><a href="#contact-us" class="text-center">Kontakt</a> </li>
+            <li><a href="#contact-us" class="text-center">Kontakt</a> </li><br>
             <li><a href="gallery-ger.html" class="text-center">Galerie</a></li>
                       <li class=".dropdown-menu">
             <div class="dropdown">
