--- a/index-ger.html
+++ b/index-ger.html
@@ -43,7 +43,7 @@
             <li><a href="#contact-us" class="text-center">Kontakt</a> </li>
             <li><a href="gallery-ger.html" class="text-center">Galerie</a></li>
                       <li class=".dropdown-menu">
-            <div class="dropdown">
+            <div class="dropdown px-4">
               <button class="dropbtn">ENG</button>
                <ul>
                  <div class="dropdown-content">
