--- a/gallery-eng.html
+++ b/gallery-eng.html
@@ -36,15 +36,25 @@
     <div class="container">
       <div class="row">
         <div class="five columns">
-            <a href="first.html"><h1 class="heading">Bravarija<span>Gajanin</span></h1></a>
+            <a href="index-eng.html"><h1 class="heading">Bravarija<span>Gajanin</span></h1></a>
         </div>
         <div class="seven columns">
           <ul>
             <li><a href="first.html#o-nama" class="text-center">About us</a> </li>
             <li><a href="first.html#contact-us" class="text-center">Contact</a> </li>
             <li><a href="gallery.html" class="text-center">Gallery</a> </li>
-            <li><a class="btn btn-outline-primary" href="gallery.html">SRB</a> </li>
-
+            <li class=".dropdown-menu">
+                <div class="dropdown px-4">
+                  <button class="dropbtn text-center justify-content-start align-items-start px-3 pb-5" style="">GER</button>
+                  <ul>
+                    <div class="dropdown-content">
+                      <li><a href="index.html">SRB</a></li>
+                      <li><a href="index-ger.html">GER</a></li>
+                      <li><a href="index-eng.html">ENG</a></li>
+                    </div>
+                  </ul>
+                </div>
+              </li>
           </ul>
         </div>
       </div>
