--- a/gallery-ger.html
+++ b/gallery-ger.html
@@ -32,25 +32,35 @@
 </head>
 
 <body class="text-center">
-  <header>
-    <div class="container">
-      <div class="row">
-        <div class="five columns">
-            <a href="first.html"><h1 class="heading">Bravarija<span>Gajanin</span></h1></a>
+    <header>
+        <div class="container">
+          <div class="row">
+            <div class="five columns">
+              <a href="index.html">
+                <h1 class="heading">Bravarija<span>Gajanin</span></h1>
+              </a>
+            </div>
+            <div class="seven columns text-center">
+              <ul>
+                <li><a href="#o-nama" class="text-center">Über uns</a> </li>
+                <li><a href="#contact-us" class="text-center">Kontakt</a> </li>
+                <li><a href="gallery-ger.html" class="text-center">Galerie</a></li>
+                <li class=".dropdown-menu">
+                  <div class="dropdown px-4">
+                    <button class="dropbtn text-center justify-content-start align-items-start px-3 pb-5" style="">ENG</button>
+                    <ul>
+                      <div class="dropdown-content">
+                        <li><a href="index.html">SRB</a></li>
+                        <li><a href="index-ger.html">GER</a></li>
+                        <li><a href="index-eng.html">ENG</a></li>
+                      </div>
+                    </ul>
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
-        <div class="seven columns">
-          <ul>
-            <li><a href="index-ger.html#o-nama" class="text-center">Über uns</a> </li>
-            <li><a href="index-ger.html#contact-us" class="text-center">Kontakt</a> </li>
-            <li><a href="gallery-ger.html" class="text-center">Galerie</a> </li>
-            <li><a class="btn btn-outline-primary" href="index.html">SRB</a> </li>
-
-          </ul>
-        </div>
-      </div>
-    </div>
-  </header>
-  
 
   <div class="row bravarija-gajanin-portfolio">
   <br><br>
