--- a/index-ger.html
+++ b/index-ger.html
@@ -42,17 +42,19 @@
             <li><a href="#o-nama" class="text-center">Über uns</a> </li>
             <li><a href="#contact-us" class="text-center">Kontakt</a> </li>
             <li><a href="gallery-ger.html" class="text-center">Galerie</a></li>
-                      <li class=".dropdown-menu">
-            <div class="dropdown px-4">
-              <button class="dropbtn">ENG</button>
-               <ul>
-                 <div class="dropdown-content">
-             <li><a href="index.html">SRB</a></li> 
-             <li><a href="index-ger.html">GER</a></li>
-             <li><a href="first.html">ENG</a></li>
-            </ul> </div></li>
+            <li class=".dropdown-menu">
+              <div class="dropdown px-4">
+                <button class="dropbtn text-center justify-content-start align-items-start px-3 pb-5" style="">ENG</button>
+                <ul>
+                  <div class="dropdown-content">
+                    <li><a href="index.html">SRB</a></li>
+                    <li><a href="index-ger.html">GER</a></li>
+                    <li><a href="index-eng.html">ENG</a></li>
+                  </div>
+                </ul>
+              </div>
+            </li>
           </ul>
-          
         </div>
       </div>
     </div>
