--- a/gallery.html
+++ b/gallery.html
@@ -43,8 +43,18 @@
             <li><a href="index.html#o-nama">O nama</a> </li>
             <li><a href="index.html#contact-us">Kontakt</a> </li>
             <li><a href="gallery.html">Galerija</a> </li>
-            <li><a class="btn btn-outline-primary" href="gallery-eng.html">ENG</a> </li>
-
+            <li class=".dropdown-menu">
+                <div class="dropdown px-4">
+                  <button class="dropbtn text-center justify-content-start align-items-start px-3 pb-5" style="">ENG</button>
+                  <ul>
+                    <div class="dropdown-content">
+                      <li><a href="index.html">SRB</a></li>
+                      <li><a href="index-ger.html">GER</a></li>
+                      <li><a href="index-eng.html">ENG</a></li>
+                    </div>
+                  </ul>
+                </div>
+              </li>
           </ul>
         </div>
       </div>
