--- a/index-eng.html
+++ b/index-eng.html
@@ -33,7 +33,7 @@
     <div class="container">
       <div class="row">
         <div class="five columns">
-          <a href="first.html">
+          <a href="index-eng.html">
             <h1 class="heading">Bravarija<span>Gajanin</span></h1>
           </a>
         </div>
@@ -42,8 +42,18 @@
             <li><a href="#o-nama" class="text-center">About us</a> </li>
             <li><a href="#contact-us" class="text-center">Contact</a> </li>
             <li><a href="gallery-eng.html" class="text-center">Gallery</a> </li>
-            <li><a class="btn btn-outline-primary" href="index.html">SRB</a> </li>
-          </ul>
+            <li class=".dropdown-menu">
+              <div class="dropdown px-4">
+                <button class="dropbtn text-center justify-content-start align-items-start px-3 pb-5" style="">SRB</button>
+                <ul>
+                  <div class="dropdown-content">
+                    <li><a href="index.html">SRB</a></li>
+                    <li><a href="index-ger.html">GER</a></li>
+                    <li><a href="index-eng.html">ENG</a></li>
+                  </div>
+                </ul>
+              </div>
+            </li>          </ul>
         </div>
       </div>
     </div>
