--- a/index.html
+++ b/index.html
@@ -42,8 +42,18 @@
             <li><a href="#o-nama" class="text-center">O nama</a> </li>
             <li><a href="#contact-us" class="text-center">Kontakt</a> </li>
             <li><a href="gallery.html" class="text-center">Galerija</a> </li>
-            <li><a class="btn btn-outline-primary" href="first.html">ENG</a> </li>
-          </ul>
+            <li class=".dropdown-menu">
+              <div class="dropdown px-4">
+                <button class="dropbtn text-center justify-content-start align-items-start px-3 pb-5" style="">ENG</button>
+                <ul>
+                  <div class="dropdown-content">
+                    <li><a href="index.html">SRB</a></li>
+                    <li><a href="index-ger.html">GER</a></li>
+                    <li><a href="index-eng.html">ENG</a></li>
+                  </div>
+                </ul>
+              </div>
+            </li>          </ul>
         </div>
       </div>
     </div>
