--- a/index-ger.html
+++ b/index-ger.html
@@ -49,7 +49,7 @@
                   <div class="dropdown-content">
                     <li><a href="index.html">SRB</a></li>
                     <li><a href="index-ger.html">GER</a></li>
-                    <li><a href="index-eng.html">ENG</a></li>
+                    <li><a href="first.html">ENG</a></li>
                   </div>
                 </ul>
               </div>
@@ -95,17 +95,14 @@
       </div>
     </div>
   </div>
-  <div style="">
+  <div class="container gallery shadow">
     <div class="container">
       <div class="row">
-        <div class="bg-white p-5 mx-auto col-md-8 col-10 text-center align-items-center justify-content-center">
-          <h2 class=""><br></h2>
-          <h3 class="display-3 text-success"><span class="badge badge-light" style="">Unsere Dienstleistungen</span></h3>
+        <div class="col-md-12 pt-5">
+          <h1 class="display-4 text-center pt-5 pb-3">Unsere&nbsp;Dienstleistungen</h1>
         </div>
       </div>
     </div>
-  </div>
-  <div class="container gallery shadow">
     <div class="row">
       <div class="seven columns">
         <img src="images/ograda.jpg" id="fence">
