--- a/index-eng.html
+++ b/index-eng.html
@@ -53,7 +53,8 @@
                   </div>
                 </ul>
               </div>
-            </li>          </ul>
+            </li>
+          </ul>
         </div>
       </div>
     </div>
@@ -77,31 +78,37 @@
       <div class="row" style="">
       </div>
     </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <h2 class=""><br></h2>
-        </div>
-      </div>
-    </div>
     <div class="row">
       <div class="five columns">
-        <h1 class="padding text-center justify-content-center text-primary my-3 mb-5"><b>Top quality service!</b></h1>
-        
-        <h2 class="text-secondary px-4 text-justify"><b><span class="bravarija">Locksmith</span><span class="gajanin">Gajanin</span> is a family company that offers various types of services in the field of metal processing.
-        <bR><br>  We manufacture and assemble items made of INOX, black hardware and fencing systems.</b></h2>
       </div>
       <div class="seven columns">
-        <img src="images/stefan.jpg" id="welding">
       </div>
     </div>
   </div>
   <div style="">
     <div class="container">
       <div class="row">
-        <div class="bg-white p-5 mx-auto col-md-8 col-10 text-center align-items-center justify-content-center">
-          <h2 class=""><br></h2>
-          <h3 class="display-3 text-success"><span class="badge badge-light" style="">Our services</span></h3>
+        <div class="col-md-5">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="row">
+                <div class="col-md-12">
+                  <h1 class="padding text-center justify-content-center text-primary my-3 mb-5"><b>Top quality service!</b></h1>
+                </div>
+              </div>
+              <div class="row text-center justify-content-center">
+                <div class="col-md-11 text-center pt-3" style="">
+                  <h2 class="text-secondary text-justify px-5 pt-5" contenteditable="true"><b><span class="bravarija">Locksmith&nbsp;</span><span class="gajanin">Gajanin</span> is a family company that offers various types of services in the field of metal processing. <br><br> We manufacture and assemble items made of INOX, black hardware and fencing systems.</b></h2>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-7"><img src="images/stefan.jpg" id="welding"></div>
+      </div>
+      <div class="row">
+        <div class="col-md-12 pt-5">
+          <h1 class="display-4 text-center pt-5 pb-3">Our service</h1>
         </div>
       </div>
     </div>
@@ -113,8 +120,7 @@
       </div>
       <div class="five columns services">
         <p id="o-nama">From the offer of our services we single out:</p>
-        <ul class="text-body"> 
-
+        <ul class="text-body">
           <li><b>INOX fences</b></li>
           <li><b>Wrought iron fences</b></li>
           <li><b>Canopies</b></li>
