--- a/index-ger.html
+++ b/index-ger.html
@@ -78,25 +78,31 @@
       <div class="row" style="">
       </div>
     </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <h2 class=""><br></h2>
-        </div>
-      </div>
-    </div>
     <div class="row">
       <div class="five columns">
-        <h1 class="padding text-center justify-content-center text-primary my-3 mb-5"><b>Top Service!</b></h1>
-        <h2 class="text-secondary px-4 text-justify"><b><span class="bravarija">Schlosser</span><span class="gajanin">Gajanin</span> ist ein Familienunternehmen, das verschiedene Arten von Dienstleistungen im Bereich der Metallverarbeitung anbietet. <br><br>Wir fertigen und montieren Artikel aus INOX, schwarzer Hardware und Zaunsystemen.</b></h2>
       </div>
       <div class="seven columns">
-        <img src="images/stefan.jpg" id="welding">
       </div>
     </div>
   </div>
   <div class="container gallery shadow">
     <div class="container">
+      <div class="row">
+        <div class="col-md-5">
+          <div class="row">
+            <div class="col-md-12">
+              <h1 class="padding text-center justify-content-center text-primary my-3 mb-5"><b>Top Service!</b></h1>
+            </div>
+          </div>
+          <div class="row justify-content-center">
+            <div class="col-md-11 mx-0" style="">
+              <h2 class="text-secondary text-justify px-4 pt-5" style=""><b><span class="bravarija">Schlosser&nbsp;</span><span class="gajanin">Gajanin</span> ist ein Familienunternehmen, das verschiedene Arten von Dienstleistungen im Bereich der Metallverarbeitung anbietet. <br></b></h2>
+              <h2 class="text-secondary text-justify px-2 pt-5" style="" contenteditable="true"><b>Wir fertigen und montieren Artikel aus INOX, schwarzer Hardware und Zaunsystemen.</b></h2>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-7"><img src="images/stefan.jpg" id="welding"></div>
+      </div>
       <div class="row">
         <div class="col-md-12 pt-5">
           <h1 class="display-4 text-center pt-5 pb-3">Unsere&nbsp;Dienstleistungen</h1>
