--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
                   </div>
                 </ul>
               </div>
-            </li>          </ul>
+            </li>
+          </ul>
         </div>
       </div>
     </div>
@@ -84,24 +85,33 @@
         </div>
       </div>
     </div>
-    <div class="row">
+    <div class="row" style="">
       <div class="five columns">
-        <h1 class="padding text-center justify-content-center text-primary my-3 mb-5"><b>Vrhunski kvalitet usluga!</b></h1>
-        
-        <h2 class="text-secondary px-4 text-justify"><b><span class="bravarija">Bravarija</span><span class="gajanin">Gajanin</span> je porodična firma koja nudi razne vrste usluga u oblasti obrade metala. 
-        <bR><br>  Bavimo se izradom i montažom predmeta od INOX-a, crne bravarije i ogradnih sistema.</b></h2>
       </div>
       <div class="seven columns">
-        <img src="images/stefan.jpg" id="welding">
       </div>
     </div>
   </div>
   <div style="">
     <div class="container">
       <div class="row">
-        <div class="bg-white p-5 mx-auto col-md-8 col-10 text-center align-items-center justify-content-center">
-          <h2 class=""><br></h2>
-          <h3 class="display-3 text-success"><span class="badge badge-light" style="">Naše usluge</span></h3>
+        <div class="col-md-5">
+          <div class="row">
+            <div class="col-md-12">
+              <h1 class="padding text-center justify-content-center text-primary my-3 mb-5" style=""><b>Vrhunski kvalitet usluga!</b></h1>
+            </div>
+          </div>
+          <div class="row justify-content-center">
+            <div class="col-md-11 pt-3">
+              <h2 class="text-secondary text-justify px-5 pt-5"><b><span class="bravarija">Bravarija&nbsp;</span><span class="gajanin">Gajanin</span> je porodična firma koja nudi razne vrste usluga u oblasti obrade metala. <br><br> Bavimo se izradom i montažom predmeta od INOX-a, crne bravarije i ogradnih sistema.</b></h2>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-7"><img src="images/stefan.jpg" id="welding"></div>
+      </div>
+      <div class="row">
+        <div class="col-md-12 pt-5">
+          <h1 class="display-4 text-center pt-5 pb-3">Naše usluge</h1>
         </div>
       </div>
     </div>
@@ -113,8 +123,7 @@
       </div>
       <div class="five columns services">
         <p id="o-nama">Iz ponude naših usluga izdvajamo:</p>
-        <ul class="text-body"> 
-
+        <ul class="text-body">
           <li><b>INOX ograde</b></li>
           <li><b>Kovane ograde</b></li>
           <li><b>Nadstrešnice</b></li>
