--- a/gallery-ger.html
+++ b/gallery-ger.html
@@ -52,7 +52,7 @@
                       <div class="dropdown-content">
                         <li><a href="index.html">SRB</a></li>
                         <li><a href="index-ger.html">GER</a></li>
-                        <li><a href="index-eng.html">ENG</a></li>
+                        <li><a href="index-english.html">ENG</a></li>
                       </div>
                     </ul>
                   </div>
