--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                   <div class="dropdown-content">
                     <li><a href="index.html">SRB</a></li>
                     <li><a href="index-ger.html">GER</a></li>
-                    <li><a href="index-eng.html">ENG</a></li>
+                    <li><a href="index-english.html">ENG</a></li>
                   </div>
                 </ul>
               </div>
